@@ -23,6 +23,8 @@ Release 0.2.1 - Unreleased
    HBASE-808,809 MAX_VERSIONS not respected, and Deletall doesn't and inserts
                after delete don't work as expected
                (Jean-Daniel Cryans via Stack)
+   HBASE-831   committing BatchUpdate with no row should complain
+               (Andrew Purtell via Jim Kellerman)
 
   IMPROVEMENTS
    HBASE-801  When a table haven't disable, shell could response in a "user
